@@ -94,3 +94,6 @@ P d4_12b.out $samtools mpileup -ABQ0 -a -a -l xx.bed  xx#depth1.bam xx#depth2.ba
 # With and without -J (include deletions)
 P d6_wdel.out  $samtools depth -J depth_del.sam
 P d6_nodel.out $samtools depth    depth_del.sam
+
+# With -s (remove operlaps)
+P d7_nodup.out $samtools depth -s xx#depth4.sam
