@@ -1,0 +1,62 @@
+xx	1	1
+xx	2	1
+xx	3	1
+xx	4	1
+xx	5	1
+xx	6	1
+xx	7	1
+xx	8	1
+xx	9	1
+xx	10	1
+xx	11	1
+xx	12	1
+xx	13	1
+xx	14	1
+xx	21	1
+xx	22	1
+xx	23	1
+xx	24	1
+xx	25	2
+xx	26	2
+xx	27	2
+xx	28	2
+xx	29	2
+xx	30	2
+xx	31	1
+xx	32	1
+xx	33	1
+xx	34	1
+xx	45	1
+xx	46	1
+xx	47	1
+xx	48	1
+xx	49	1
+xx	50	1
+xx	51	0
+xx	52	0
+xx	53	0
+xx	54	0
+xx	55	1
+xx	56	1
+xx	57	1
+xx	58	1
+xx	59	1
+xx	60	1
+xx	61	1
+xx	62	1
+xx	63	1
+xx	64	1
+xx	71	1
+xx	72	1
+xx	73	1
+xx	74	1
+xx	75	1
+xx	76	1
+xx	77	1
+xx	78	1
+xx	79	1
+xx	80	1
+xx	81	1
+xx	82	1
+xx	83	1
+xx	84	1
